--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
       <span id="operator-display">?</span>
       <input class="math-input" id="math-input2" value="0" />
       =
-      <span id="math-result"></span>
+      <span id="math-result">0</span>
     </div>
     <div id="btn-container">
       <button class="operator" id="plus">+</button>
       <button class="operator" id="minus">-</button>
       <button class="operator" id="times">*</button>
       <button class="operator" id="divided">/</button>
-      <button id="run-btn">Run</button>
     </div>
   </body>
 </html>
